<resources>
    <string name="app_name">Calculator</string>
    <string name="mainactivity_textview_title">Ecercise 3: Simple calculator</string>
    <string name="mainactivity_textview_operand1">Operand1:</string>
    <string name="mainactivity_textview_operand2">Operand2:</string>

    <string name="mainactivity_button_add">+</string>
    <string name="mainactivity_button_sub">-</string>
    <string name="mainactivity_button_mul">*</string>
    <string name="mainactivity_button_div">/</string>
    <string name="mainactivity_button_eq">=</string>


    <string name="ERROR_OPERANDS_NOT_VALID">Please enter numbers on both EditTexts</string>
    <string name="ERROR_DIVIDE_BY_ZERO">Cannot divide by zero</string>

</resources>