<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/mainactivity_textview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="618dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical"
        android:showDividers="middle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/mainactivity_textview_operand1"
                android:textSize="18sp" />

            <EditText
                android:textCursorDrawable="@drawable/cursor_background"
                android:backgroundTint="#FFC107"
                android:id="@+id/edOperand1"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:backgroundTint="#FFC107"

                android:id="@+id/btAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="operationButtonClicked"
                android:text="@string/mainactivity_button_add"
                android:textSize="20dp" />

            <Button
                android:backgroundTint="#FFC107"

                android:onClick="operationButtonClicked"
                android:id="@+id/btSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/mainactivity_button_sub" />

            <Button
                android:backgroundTint="#FFC107"

                android:onClick="operationButtonClicked"
                android:id="@+id/btMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/mainactivity_button_mul" />

            <Button
                android:backgroundTint="#FFC107"

                android:onClick="operationButtonClicked"
                android:id="@+id/btDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/mainactivity_button_div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/mainactivity_textview_operand2"
                android:textSize="18dp" />

            <EditText
                android:backgroundTint="#FFC107"
                android:textCursorDrawable="@drawable/cursor_background"
                android:id="@+id/edOperand2"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>


        <View
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#FFC107"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:paddingLeft="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/mainactivity_button_eq"
                android:textAlignment="center"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/txtRes"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>